made change in swagger ui and unlink sync
